--- a/app.json
+++ b/app.json
@@ -1,28 +1,25 @@
 {
   "pages": [
-    "pages/products/index",
     "pages/index/index",
-    "pages/entry/index",
     "pages/footer/footer",
     "pages/contact/contact",
     "pages/short/index",
-    "pages/broader/index",
     "pages/us/us",
     "pages/newlist/newlist",
     "pages/clinic/index",
-    "pages/calendar/index",
-    "pages/mine/index",
     "pages/newdetail/newdetail",
-    "pages/broadcast/index",
     "pages/hot/index",
+    "pages/broadcast/index",
     "pages/course/index",
-
-    "pages/mycourse/index"
-
+    "pages/products/index",
+    "pages/videos/index",
+    "pages/order/index",
+    "pages/mine/index",
+    "pages/coursedetail/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#b41927",
+    "navigationBarBackgroundColor": "#D1141B",
     "navigationBarTitleText": "首页",
     "navigationBarTextStyle": "#fff"
   },
